fix: align input ctas on wrapper

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,13 +1,18 @@
-textarea {
+.input-wrapper {
   position: relative;
   width: min(450px, 93%);
+  margin-top: 16px;
+  margin-bottom: 20px;
+}
+
+textarea {
+  width: 100%;
   height: 140px;
   background: #1a1b24;
   border: none;
   border-radius: 10px;
   outline: none;
   font-size: 16px;
-  margin-top: 16px;
   padding: 5px 5px 5px 6px;
   resize: none;
 }
@@ -16,8 +21,8 @@ textarea {
   display: flex;
   justify-content: flex-end;
   position: absolute;
-  right: 16px;
-  bottom: 12px;
+  right: 0;
+  bottom: 0;
 }
 
 .button {
